plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.google.code.gson:gson:2.8.9'

    testImplementation ('org.junit.jupiter:junit-jupiter-api')
    testImplementation ('org.junit.jupiter:junit-jupiter-engine')
    testImplementation ('org.junit.jupiter:junit-jupiter-params')
    testImplementation ('org.assertj:assertj-core')
    testImplementation ('org.mockito:mockito-core')
    testImplementation ('org.mockito:mockito-junit-jupiter')
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.with {
        encoding = 'UTF-8'
    }
}